feat: menu mobile

--- a/exercicio0303-menu-mobile/styles.css
+++ b/exercicio0303-menu-mobile/styles.css
@@ -1,7 +1,18 @@
+body {
+  font-size: 1.25rem;
+  font-family: sans-serif;
+  margin: 2rem;
+  height: 800px;
+}
+
 body,
 ul {
   margin: 0px;
   padding: 0px;
+}
+
+button {
+  font-size: 1.5rem;
 }
 
 a {
